Debug proba Fold + strategie plus probable + pas équilibrage à 1